// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip dark should match snapshot 1`] = `
.cENRLf.open-enter .c0.open-enter:before,
.cENRLf.open-appear,
.cENRLf.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.bcUhGD.open-enter .c0.open-enter:before,
.bcUhGD.open-appear,
.bcUhGD.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 bcUhGD"
  direction="auto"
/>
`;

exports[`Tooltip should match snapshot 1`] = `
.cENRLf.open-enter .c0.open-enter:before,
.cENRLf.open-appear,
.cENRLf.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 cENRLf"
  direction="auto"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is bottom 1`] = `
.cENRLf.open-enter .c0.open-enter:before,
.cENRLf.open-appear,
.cENRLf.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.bcUhGD.open-enter .c0.open-enter:before,
.bcUhGD.open-appear,
.bcUhGD.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.kyRINg.open-enter .c0.open-enter:before,
.kyRINg.open-appear,
.kyRINg.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 kyRINg"
  direction="bottom"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is invalid 1`] = `
.cENRLf.open-enter .c0.open-enter:before,
.cENRLf.open-appear,
.cENRLf.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.bcUhGD.open-enter .c0.open-enter:before,
.bcUhGD.open-appear,
.bcUhGD.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.kyRINg.open-enter .c0.open-enter:before,
.kyRINg.open-appear,
.kyRINg.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.diTJYY.open-enter .c0.open-enter:before,
.diTJYY.open-appear,
.diTJYY.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.gCIEPE.open-enter .c0.open-enter:before,
.gCIEPE.open-appear,
.gCIEPE.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.cnGjUl.open-enter .c0.open-enter:before,
.cnGjUl.open-appear,
.cnGjUl.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 bcUhGD"
  direction="invalid"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is left 1`] = `
.cENRLf.open-enter .c0.open-enter:before,
.cENRLf.open-appear,
.cENRLf.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.bcUhGD.open-enter .c0.open-enter:before,
.bcUhGD.open-appear,
.bcUhGD.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.kyRINg.open-enter .c0.open-enter:before,
.kyRINg.open-appear,
.kyRINg.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.diTJYY.open-enter .c0.open-enter:before,
.diTJYY.open-appear,
.diTJYY.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.gCIEPE.open-enter .c0.open-enter:before,
.gCIEPE.open-appear,
.gCIEPE.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 gCIEPE"
  direction="left"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is right 1`] = `
.cENRLf.open-enter .c0.open-enter:before,
.cENRLf.open-appear,
.cENRLf.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.bcUhGD.open-enter .c0.open-enter:before,
.bcUhGD.open-appear,
.bcUhGD.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.kyRINg.open-enter .c0.open-enter:before,
.kyRINg.open-appear,
.kyRINg.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.diTJYY.open-enter .c0.open-enter:before,
.diTJYY.open-appear,
.diTJYY.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.gCIEPE.open-enter .c0.open-enter:before,
.gCIEPE.open-appear,
.gCIEPE.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.cnGjUl.open-enter .c0.open-enter:before,
.cnGjUl.open-appear,
.cnGjUl.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 cnGjUl"
  direction="right"
/>
`;

exports[`Tooltip should match snapshot when visisble and direction is top 1`] = `
.cENRLf.open-enter .c0.open-enter:before,
.cENRLf.open-appear,
.cENRLf.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.bcUhGD.open-enter .c0.open-enter:before,
.bcUhGD.open-appear,
.bcUhGD.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.kyRINg.open-enter .c0.open-enter:before,
.kyRINg.open-appear,
.kyRINg.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

.diTJYY.open-enter .c0.open-enter:before,
.diTJYY.open-appear,
.diTJYY.open-appear:before {
  -webkit-transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  transition: opacity 0.25s cubic-bezier(0.25,0.46,0.45,0.94);
  display: block;
  opacity: 0;
}

<div
  className="c0 diTJYY"
  direction="top"
/>
`;
